name:                WabiSabi
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              lontivero
maintainer:          lucasontivero@gmail.com
category:            Bitcoin
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10


library
  exposed-modules:     WabiSabi
  build-depends:       base >=4.9 && <4.10
                     , cryptohash-sha256
  
  hs-source-dirs:      src 
  default-language:    Haskell2010
  
